# ACE

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gcc-arm-none-eabi.cmake  stm32f0.cmake
drivers/: CMakeLists.txt
src/: CMakeLists.txt
src/setup/: stm32f042x6_FLASH.ld  syscalls.c
src/test_apps/: serial_print.cpp
